added boilerplate html structure

--- a/app/index.html
+++ b/app/index.html
@@ -9,5 +9,39 @@
 </head>
 <body>
 
+  <!-- header -->
+  <header class="header">
+    <div class="container">
+      <h1>Header Logo</h1>
+    </div>
+  </header>
+
+  <!-- section one -->
+  <section class="section section-one">
+    <div class="container">
+
+    </div>
+  </section>
+
+  <!-- section two -->
+  <section class="section section-two">
+    <div class="container">
+
+    </div>
+  </section>
+
+  <!-- section three -->
+  <section class="section section-three">
+    <div class="container">
+
+    </div>
+  </section>
+
+  <!-- footer -->
+  <footer class="footer">
+    <div class="container">
+
+    </div>
+  </footer>
 </body>
 </html>
