--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://www.bootstrapcdn.com/fontawesome/">
 </head>
 <body>
 
@@ -13,6 +14,13 @@
   <header class="header">
     <div class="container">
       <h1>Header Logo</h1>
+      <nav class="navbar">
+        <ul class="navigation">
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
