added coffeeipsum and an img tag

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
   <header class="header">
     <div class="container">
       <h1>Header Logo</h1>
+      <img src="" alt="">
       <nav class="navbar">
         <ul class="navigation">
           <li></li>
@@ -27,21 +28,26 @@
   <!-- section one -->
   <section class="section section-one">
     <div class="container">
-
+      <h2>Section Heading</h2>
+      <p>
+        Extra viennese arabica est arabica java so brewed. Grounds, fair trade, aftertaste extraction ut, single shot organic aromatic at half and half.
+      </p>
     </div>
   </section>
 
   <!-- section two -->
   <section class="section section-two">
     <div class="container">
-
+      <h2>Section Heading</h2>
+      <p>Ristretto, plunger pot, roast robusta pumpkin spice acerbic pumpkin spice aftertaste that roast. Shop filter frappuccino coffee, macchiato et sweet white and spoon extraction.</p>
     </div>
   </section>
 
   <!-- section three -->
   <section class="section section-three">
     <div class="container">
-
+      <h2>Section Heading</h2>
+      <p>So crema, black carajillo latte qui aftertaste, and turkish cream grinder aromatic. Con panna filter beans, dripper arabica shop filter skinny.</p>
     </div>
   </section>
 
