--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
   <header class="header">
     <div class="container">
       <h1>Header Logo</h1>
-      <img src="" alt="">
+      <img src="images/header-banner.jpg" alt="">
       <nav class="navbar">
         <ul class="navigation">
           <li></li>
